@@ -1,3 +1,11 @@
+2006-02-27  Carlos O'Donell  <carlos@codesourcery.com>
+
+	* Makefile.in: TEXI2HTML uses makeinfo. Define 
+	HTMLFILES. Add html targets.
+	* configure.texi: Use ifnottex. Add alternative 
+	image format specifier as jpg.
+	* standards.texi: Use ifnottex.
+
 2005-10-21  Mark Mitchell  <mark@codesourcery.com>
 
 	* texi2pod.pl: Substitue for @value even when part of @include. 
